# ChangeLog for media-libs/fontconfig
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.52 2004/07/14 03:06:45 geoman Exp $

  13 Jul 2004; Stephen P. Becker <geoman@gentoo.org> fontconfig-2.2.2.ebuild:
  Stable on mips - bug 56886

  01 Jul 2004; Aron Griffis <agriffis@gentoo.org> fontconfig-2.2.2.ebuild:
  stable on alpha and ia64

  19 Jun 2004; foser <foser@gentoo.org> fontconfig-2.2.2.ebuild :
  Build with DESTDIR to fix libtool problems (#50076)

*fontconfig-2.1-r1 (02 Jun 2004)

  02 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org>
  fontconfig-2.1-r1.ebuild:
  resurrect fontconfig-2.1-r1 for keywords

  02 Jun 2004; foser <foser@gentoo.org> fontconfig-2.2* :
  Don't force fc-cache update, it breaks portage removal of fonts (#13808)
  2.2.2 : remove ed dep (#42805)

  17 Apr 2004; Travis Tilley <lv@gentoo.org> fontconfig-2.2.1.ebuild,
  fontconfig-2.2.2.ebuild:
  marked stable on amd64

*fontconfig-2.2.2 (11 Mar 2004)

  11 Mar 2004; <matsuu@gentoo.org> fontconfig-2.2.2.ebuild, metadata.xml:
  Version bumped.

  13 Jan 2004; <gustavoz@gentoo.org> fontconfig-2.2.1.ebuild:
  marked stable on hppa

  26 Nov 2003; Brandy Westcott brandy@gentoo.org fontconfig-2.2.1.ebuild:
  Fixed SRC_URI.

  01 Nov 2003; Seemant Kulleen <seemant@gentoo.org> fontconfig-2.2.1.ebuild:
  SRC_URI and HOMEPAGE update, thanks to: Stony Yakovac <stonyy@tek.com> in bug
  #32423

  22 Oct 2003; Aron Griffis <agriffis@gentoo.org> fontconfig-2.2.1.ebuild:
  Stable on alpha

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org> fontconfig-2.2.1.ebuild:
  set ppc in keywords

  01 Jul 2003; Todd Sunderlin <todd@gentoo.org> fontconfig-2.1.4.ebuild:
  set stable on sparc

  17 Jun 2003; foser <foser@gentoo.org> fontconfig-2.2.0-r2.ebuild :
  backport disable docs fix (#21195)
 
*fontconfig-2.2.1 (11 Jun 2003)
