@@ -1,2 +1,0 @@
-MD5 2f2852c80924a9b5356c3037a471c1a1 fcpackage.2_1.tar.gz 544661
-MD5 447ec2f65da7aa027aab7c23f3eaa358 fontconfig-2.1-r1-gentoo.tar.bz2 5464
