@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/fontconfig
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.52 2004/07/14 03:06:45 geoman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.53 2004/07/19 19:30:34 foser Exp $
+
+*fontconfig-2.2.3 (19 Jul 2004)
+
+  19 Jul 2004; foser <foser@gentoo.org> fontconfig-2.2.3.ebuild :
+  New release
 
   13 Jul 2004; Stephen P. Becker <geoman@gentoo.org> fontconfig-2.2.2.ebuild:
   Stable on mips - bug 56886
